--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -1,13 +1,17 @@
 {
+  "title": "Адвокат Олександр Кравчук",
+  "description": "Професійний адвокат з досвідом у господарських, сімейних, кримінальних, цивільних та адміністративних справах. А також можливе абонентське юридичне обслуговування підприємств, установ, організацій та органів місцевого самоврядування.",
   "error": "Виникла помилка",
   "error_404": "Сторінку не знайдено",
   "lawyer": "Адвокат",
   "oleksandr_kravchuk": "Олександр Кравчук",
-  "phone": "+380975148908",
-  "phone_formatted": "+38 (097) 514-89-08",
   "home": "Головна",
   "practices": "Практики",
-  "publications": "Публікації",
+  "blog": "Блог",
   "contacts": "Контакти",
-  "documents": "Зразки документів"
+  "documents": "Зразки документів",
+  "phone": "+380975148908",
+  "phone_formatted": "+38 (097) 514-89-08",
+  "telegram": "cox2007",
+  "information": "Інформація"
 }
