--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -1,7 +1,7 @@
 {
   "title": "Адвокат Олександр Кравчук",
   "description": "Професійний адвокат з досвідом у господарських, сімейних, кримінальних, цивільних та адміністративних справах. А також можливе абонентське юридичне обслуговування підприємств, установ, організацій та органів місцевого самоврядування.",
-  "error": "Виникла помилка",
+  "error": "Виникла невідома помилка",
   "error_404": "Сторінку не знайдено",
   "lawyer": "Адвокат",
   "oleksandr_kravchuk": "Олександр Кравчук",
@@ -10,8 +10,21 @@
   "blog": "Блог",
   "contacts": "Контакти",
   "documents": "Зразки документів",
+  "phone_title": "Телефон",
   "phone": "+380975148908",
   "phone_formatted": "+38 (097) 514-89-08",
   "telegram": "cox2007",
-  "information": "Інформація"
+  "navigation": "Навігація",
+  "address_title": "Адреса",
+  "address": "Україна, Волинська область,\n м. Нововолинськ, вулиця Грушевського, буд. 17",
+  "legal": "Юридичне застереження",
+  "work_schedule": "Графік роботи",
+  "mon-fri": "Пн-Пт",
+  "copyright": "© {year} Адвокат Олександр Кравчук",
+  "main": {
+    "title": "Адвокат Олександр Кравчук",
+    "description": "Консультація та введення господарських, сімейних, кримінальних, цивільних та адміністративних справ",
+    "address_short": "Україна, м. Нововолинськ",
+    "get_consultation": "Отримати консультацію адвоката"
+  }
 }
