feat: add PracticeCard

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -21,6 +21,7 @@
   "work_schedule": "Work Schedule",
   "mon-fri": "Mon-Fri",
   "copyright": "© {year} Lawyer Oleksandr Kravchuk",
+  "more": "More",
   "main": {
     "title": "Lawyer Oleksandr Kravchuk",
     "description": "Consultation and introduction of economic, family, criminal, civil and administrative cases",
