--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -21,6 +21,7 @@
   "work_schedule": "Графік роботи",
   "mon-fri": "Пн-Пт",
   "copyright": "© {year} Адвокат Олександр Кравчук",
+  "more": "Детальніше",
   "main": {
     "title": "Адвокат Олександр Кравчук",
     "description": "Консультація та введення господарських, сімейних, кримінальних, цивільних та адміністративних справ",
