--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -22,6 +22,9 @@
   "mon-fri": "Пн-Пт",
   "copyright": "© {year} Адвокат Олександр Кравчук",
   "more": "Детальніше",
+  "all_services": "Усі послуги",
+  "order_services": "Замовити послуги адвоката",
+  "order_services_instruction": "Для замовлення послуг, зателефонуйте або відправте запит на електронну адресу",
   "main": {
     "title": "Адвокат Олександр Кравчук",
     "description": "Консультація та введення господарських, сімейних, кримінальних, цивільних та адміністративних справ",
