--- a/content/en/practices/3.criminal.md
+++ b/content/en/practices/3.criminal.md
@@ -1,10 +1,10 @@
-::practice{name="index"}
+::practice{name="criminal"}
 
 #image
 ![](/images/main_bg.jpg){style="width: 100%; height: 100%; object-fit: cover;"}
 
 #title
-Привіт світе
+Criminal Law
 
 #description
 Привіт великий світе, що вже мільйони років існує та не згасає. Привіт великий світе, що вже мільйони років...
