--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -25,10 +25,25 @@
   "all_services": "Усі послуги",
   "order_services": "Замовити послуги адвоката",
   "order_services_instruction": "Для замовлення послуг, зателефонуйте або відправте запит на електронну адресу",
-  "main": {
+  "main_page": {
     "title": "Адвокат Олександр Кравчук",
     "description": "Консультація та введення господарських, сімейних, кримінальних, цивільних та адміністративних справ",
     "address_short": "Україна, м. Нововолинськ",
     "get_consultation": "Отримати консультацію адвоката"
+  },
+  "contacts_page": {
+    "contact_us": "Звʼяжіться з нами",
+    "have_any_question": "Маєте запитання?",
+    "contact_form_description": "Якщо у вас є якісь питання, заповніть інформацію у формі нижче, і ми звʼяжемось з Вами найближчим часом.",
+    "name": "Імʼя",
+    "email": "Email",
+    "message": "Повідомлення",
+    "send_message": "Відправити повідомлення",
+    "form_errors": {
+      "name": "Поле імʼя є обовʼязковим",
+      "email": "Поле Email є обовʼязковим",
+      "email_invalid": "Невірний формат електронної пошти",
+      "message": "Повідомлення має містити що найменше {number} символів"
+    }
   }
 }
