--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -25,6 +25,9 @@
   "all_services": "Усі послуги",
   "order_services": "Замовити послуги адвоката",
   "order_services_instruction": "Для замовлення послуг, зателефонуйте або відправте запит на електронну адресу",
+  "order_services_long_instruction": "Для замовлення послуг адвоката зателефонуйте нам або напишіть на электронну адресу. Також надаємо онлайн консультації адвоката по телефону або email.",
+  "order_now": "Замовити зараз",
+  "lawyer_practices": "Практики адвоката",
   "main_page": {
     "title": "Адвокат Олександр Кравчук",
     "description": "Консультація та введення господарських, сімейних, кримінальних, цивільних та адміністративних справ",
