--- a/content/uk/practices/2.civil-law.md
+++ b/content/uk/practices/2.civil-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'civil-law'
 title: 'Цивільне право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 ::practice
 ---
 id: 'civil-law'
 title: 'Цивільне право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 
 #shortDescription
