--- a/content/uk/practices/5.labor-law.md
+++ b/content/uk/practices/5.labor-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'labor-law'
 title: 'Трудове право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 ::practice
 ---
 id: 'labor-law'
 title: 'Трудове право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 
 #shortDescription
