--- a/content/uk/practices/1.family-law.md
+++ b/content/uk/practices/1.family-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'family-law'
 title: 'Сімейне право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 ::practice
 ---
 id: 'family-law'
 title: 'Сімейне право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 
 #shortDescription
