--- a/content/uk/practices/3.criminal-law.md
+++ b/content/uk/practices/3.criminal-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'criminal-law'
 title: 'Кримінальне право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 ::practice
 ---
 id: 'criminal-law'
 title: 'Кримінальне право'
-image: '/images/practices/practice_bg.jpg'
+image: '/images/practice_bg.jpg'
 ---
 
 #shortDescription
