finish contacts page and hide pages that in development

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -1,8 +1,11 @@
 {
   "title": "Lawyer Oleksandr Kravchuk",
   "description": "Professional lawyer with experience in commercial, family, criminal, civil, and administrative cases. We also offer subscription-based legal services for businesses, institutions, organizations, and local government. We guarantee high-quality services and an individual approach to each client.",
-  "error": "Unknown error has occured",
+  "error": "Error",
+  "error_unknown": "Unknown error has occured",
   "error_404": "Page not found",
+  "sending_form_error": "Error while sending form, please try again later",
+  "sending_form_succes": "Form has been sent successfully",
   "lawyer": "Lawyer",
   "oleksandr_kravchuk": "Oleksandr Kravchuk",
   "home": "Home",
@@ -20,6 +23,8 @@
   "legal": "Legal disclaimer",
   "work_schedule": "Work Schedule",
   "mon-fri": "Mon-Fri",
+  "sat-sun": "Sat-Sun",
+  "day-off": "Dayy Off",
   "copyright": "© {year} Lawyer Oleksandr Kravchuk",
   "more": "More",
   "all_services": "All Services",
