--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -1,8 +1,11 @@
 {
   "title": "Адвокат Олександр Кравчук",
   "description": "Професійний адвокат з досвідом у господарських, сімейних, кримінальних, цивільних та адміністративних справах. А також можливе абонентське юридичне обслуговування підприємств, установ, організацій та органів місцевого самоврядування.",
-  "error": "Виникла невідома помилка",
+  "error": "Помилка",
+  "error_unknown": "Виникла невідома помилка",
   "error_404": "Сторінку не знайдено",
+  "sending_form_error": "Під час надсилання форми сталася помилка, будь ласка, спробуєте пізніше",
+  "sending_form_succes": "Форму успішно надіслано",
   "lawyer": "Адвокат",
   "oleksandr_kravchuk": "Олександр Кравчук",
   "home": "Головна",
@@ -20,6 +23,8 @@
   "legal": "Юридичне застереження",
   "work_schedule": "Графік роботи",
   "mon-fri": "Пн-Пт",
+  "sat-sun": "Сб-Нд",
+  "day-off": "Вихідний",
   "copyright": "© {year} Адвокат Олександр Кравчук",
   "more": "Детальніше",
   "all_services": "Усі послуги",
