feat: change description

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -1,6 +1,6 @@
 {
   "title": "Lawyer Oleksandr Kravchuk",
-  "description": "Professional lawyer with experience in commercial, family, criminal, civil, and administrative cases. We also offer subscription-based legal services for businesses, institutions, organizations, and local government. We guarantee high-quality services and an individual approach to each client.",
+  "description": "Professional lawyer in Novovolynsk with experience in commercial, family, criminal, civil, and administrative cases. We also offer subscription-based legal services for businesses, institutions, organizations, and local government. We guarantee high-quality services and an individual approach to each client.",
   "error": "Error",
   "error_unknown": "Unknown error has occured",
   "error_404": "Page not found",
