--- a/lang/uk-UA.json
+++ b/lang/uk-UA.json
@@ -1,6 +1,6 @@
 {
   "title": "Адвокат Олександр Кравчук",
-  "description": "Професійний адвокат з досвідом у господарських, сімейних, кримінальних, цивільних та адміністративних справах. А також можливе абонентське юридичне обслуговування підприємств, установ, організацій та органів місцевого самоврядування.",
+  "description": "Професійний адвокат у м. Нововолинськ з досвідом у господарських, сімейних, кримінальних, цивільних та адміністративних справах. А також можливе абонентське юридичне обслуговування підприємств, установ, організацій та органів місцевого самоврядування.",
   "error": "Помилка",
   "error_unknown": "Виникла невідома помилка",
   "error_404": "Сторінку не знайдено",
