feat: change practices images

--- a/content/en/practices/1.family-law.md
+++ b/content/en/practices/1.family-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'family-law'
 title: 'Family Law'
-image: '/images/practice_bg.jpg'
+image: '/images/family_law.jpg'
 ---
 ::practice
 ---
 id: 'family-law'
 title: 'Family Law'
-image: '/images/practice_bg.jpg'
+image: '/images/family_law.jpg'
 ---
 
 #shortDescription
