--- a/content/en/practices/3.criminal-law.md
+++ b/content/en/practices/3.criminal-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'criminal-law'
 title: 'Criminal Law'
-image: '/images/practice_bg.jpg'
+image: '/images/criminal_law.jpg'
 ---
 ::practice
 ---
 id: 'criminal-law'
 title: 'Criminal Law'
-image: '/images/practice_bg.jpg'
+image: '/images/criminal_law.jpg'
 ---
 
 #shortDescription
