--- a/content/en/practices/5.labor-law.md
+++ b/content/en/practices/5.labor-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'labor-law'
 title: 'Labor Law'
-image: '/images/practice_bg.jpg'
+image: '/images/labor_law.jpg'
 ---
 ::practice
 ---
 id: 'labor-law'
 title: 'Labor Law'
-image: '/images/practice_bg.jpg'
+image: '/images/labor_law.jpg'
 ---
 
 #shortDescription
