--- a/content/en/practices/2.civil-law.md
+++ b/content/en/practices/2.civil-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'civil-law'
 title: 'Civil Law'
-image: '/images/practice_bg.jpg'
+image: '/images/civil_law.jpg'
 ---
 ::practice
 ---
 id: 'civil-law'
 title: 'Civil Law'
-image: '/images/practice_bg.jpg'
+image: '/images/civil_law.jpg'
 ---
 
 #shortDescription
