--- a/content/en/practices/4.administrative-law.md
+++ b/content/en/practices/4.administrative-law.md
@@ -1,13 +1,13 @@
 ---
 id: 'administrative-law'
 title: 'Administrative Law'
-image: '/images/practice_bg.jpg'
+image: '/images/administrative_law.jpg'
 ---
 ::practice
 ---
 id: 'administrative-law'
 title: 'Administrative Law'
-image: '/images/practice_bg.jpg'
+image: '/images/administrative_law.jpg'
 ---
 
 #shortDescription
